Create temporary file in s3MultiPartFile instead of reading each time from S3
Signed-off-by: basseche <bassel.el-cheikh_externe@rte-france.com>